test_regress/t/t_tri_pull_bad.out
%Error-UNSUPPORTED: t/t_tri_pull_bad.v:14:12: Unsupported: Conflicting pull directions.
                                            : ... note: In instance 't'
   14 |   pulldown p2 (A);
      |            ^~
                    t/t_tri_pull_bad.v:13:10: ... Location of conflicting pull.
   13 |   pullup p1 (A);
      |          ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
